--- a/test/Makefile
+++ b/test/Makefile
@@ -11,7 +11,7 @@ CONTAINER_NAME=${PROJECT_NAME}-builder
 help:
 	@awk 'BEGIN {FS = ":.*##"; printf "Usage: make \033[36m<target>\033[0m\n"} /^[a-zA-Z_-]+:.*?##/ { printf "  \033[36m%-10s\033[0m %s\n", $$1, $$2 } /^##@/ { printf "\n\033[1m%s\033[0m\n", substr($$0, 5) } ' $(MAKEFILE_LIST)
 
-submodules: ## Resolves and downloads dependencies in requirements.txt
+submodule: ## Initializes and updates git submodules
 	git submodule init
 	git submodule update
 
